# stelclone

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE.md  OVERVIEW.md  implementation_plan.md
docs/config/: buildings.json  game_config.json  missiles.json  ships.json
docs/game/: background.md  colonization.md  economy.md  gameplay.md  missiles.md  ships.md
src/: game.h  main.c  render.c  render.h
src/data/: game_settings.c  game_settings.h  game_types.h  resources.c  resources.h
src/game/: asteroid.c  asteroid.h
src/game/asteroid/: generate.h  position.c  position.h
src/perf/: perf_asteroids.c
src/test/: asteroids.c
src/util/: log.h  rand.h
